--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0 auto;
+  max-width: 1920px;
+  font-size: 10px;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 5rem;
+}
+
 .body{
   background-color: black;
 }
