feat: add garage counter && create car button

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,20 +1,42 @@
-.headerButtons{
+.headerButtons {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 3rem;
 }
 
-.toGarage, .toWinners{
+.toGarage,
+.toWinners {
   text-decoration: none;
   border: 0.1rem solid white;
   color: white;
   padding: 0.3rem;
 }
 
-.headerMenu{
+.headerMenu {
   display: flex;
   flex-direction: column;
 }
 
-.create, .update, .controlButtons{
+.create,
+.update,
+.controlButtons {
   display: flex;
+}
+
+.controlButtons:last-child {
+  margin-bottom: 2rem;
+}
+
+.createCarName,
+.createCarColor,
+.createButton,
+.updateCarName,
+.updateCarColor,
+.updateButton, .race, .reset, .generateCars {
+  outline: none;
+  border: 0.05rem solid white;
+  background: transparent;
+  color:white;
+  margin-right: 0.4rem;
+  margin-bottom: 0.4rem;
 }
